# paylead-challenge

./: .dockerignore  .gitignore  README.md  Report.md  mypy.ini  pylama.ini  pyproject.toml  pytest.ini
.devcontainer/: dev.dockerfile  dev.dockerfile.build.sh  dev.dockerfile.run.sh  devcontainer.json
.github/workflows/: ci.yaml
paylead_challenge/: __init__.py  data_types.py  main.py
paylead_challenge/templates/: index.html
paylead_challenge/views/: home.py
scripts/: split_data.py  train_model.py
tests/: test_paylead_challenge.py
