[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "paylead_challenge"
version = "0.1.0"
description = "Paylead technical challenge"
authors = ["Thomas Aubry <github.thomaub@gmail.com>"]
readme = "README.md"
documentation = ""
license = "LICENSE.md"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.3"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylama = "^7.7.1"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-mypy = "^0.8.0"
ipython = "^7.20.0"
isort = "^5.7.0"


[tool.black]
exclude = '''
/(
\.git
| \.mypy_cache
| \.tox
| \.venv
| \.pytest_cache
| __pycache__
)/
'''
line-length = 120

[tool.isort]
profile = "black"
